# niryo_ned2

./: .gitignore  INTERFACE_SUMMARY.txt  MOVEMENT_COMMANDS_GUIDE.md  MOVEMENT_COMMANDS_INDEX.md  NED_ROS2_QUICK_REFERENCE.md  README.md  REFERENCE_GUIDE_INDEX.md  commands.md
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_pick_and_place/: package.xml
src/ned-ros2-driver/niryo_ned_pick_and_place/config/: pick_and_place.yaml
src/ned-ros2-driver/niryo_ned_ros2_driver/: setup.py
src/ned-ros2-driver/niryo_ned_ros2_driver/config/: drivers_list.yaml
src/ned-ros2-driver/niryo_ned_ros2_driver/niryo_ned_ros2_driver/: mock_action_server.py
src/ned-ros2-driver/niryo_robot_bringup/: CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_robot_bringup/config/: rviz_sim.rviz
src/ned-ros2-driver/niryo_robot_bringup/launch/: c.py  ned2_complete.launch.py  (+5 more)
src/ned-ros2-driver/niryo_robot_moveit_commander/: CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_robot_vision/: setup.cfg  setup.py
src/niryo_ned_pick_and_place/: setup.cfg  setup.py
src/niryo_ned_pick_and_place/niryo_ned_pick_and_place/: pick_and_place_node.py
src/niryo_robot_vision/: package.xml  setup.py
src/niryo_robot_vision/niryo_robot_vision/: aruco_generator.py  arucopose.py  camera_calibration.npz  camera_calibration.py  cubearuco.py  cubecopy.py  distance.py
(+42 files in other folders)
