<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_ned_pick_and_place</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2dellab@gmail.com">i</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>niryo_ned_ros2_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
